2008-02-03  yetist  <yetist@gmail.com>

	* bindings: 
	* bindings/python: 
	* bindings/python/calendar.override: 
	* bindings/python/calendar.defs: 
	* bindings/python/Makefile.am: 
	* bindings/python/date.override: 
	* bindings/python/gclmodule.c: 
	* bindings/python/date.defs: 
	* bindings/Makefile.am: 
	* configure.ac: 
	* gcl/Makefile.am: 
	* INSTALL: 
	* Makefile.am: 
	* autogen.sh: 
	add python bindings for libgcl.

=== libgcl-0.2.2 released ===

2008-02-01  yetist  <yetist@gmail.com>

	* README: 
	* configure.ac: 
	* NEWS: 
	* po/ChangeLog: 
	* po/zh_CN.po: 

	libgcl-0.2.3 released.

2008-02-01  yetist  <yetist@gmail.com>

	* libgcl-1.pc.in: requires gtk+-2.0. 

2008-02-01  yetist  <yetist@gmail.com>

	* debian/control: update debian package description.

2008-02-01  yetist  <yetist@gmail.com>

	* gcl/gcl-calendar.h: 
	* gcl/update-calendar.sh: 
	* gcl/calendar.patch: 
	* gcl/gcl-calendar.c: 
	add update-calendar.sh to generate gcl-calendar.[hc] from gtk+.

=== libgcl-0.2.2 released ===

2008-01-24  yetist  <yetist@gmail.com>

	* configure.ac: 

	libgcl-0.2.2 released.

2008-01-24  yetist  <yetist@gmail.com>

	* debian/control: 
	* debian/libgcl0.install: 
	* debian/libgcl-bin.install: 
	* debian/rules: 
	* Makefile.am: 
	some change.

2008-01-24  yetist  <yetist@gmail.com>

	* debian: 
	* debian/control: 
	* debian/dirs: 
	* debian/compat: 
	* debian/libgcl-doc.install: 
	* debian/libgcl-bin.install: 
	* debian/libgcl-dev.dirs: 
	* debian/copyright: 
	* debian/docs: 
	* debian/rules: 
	* debian/changelog.in: 
	* debian/libgcl-dev.install: 
	* configure.ac: 
	* gcl/gcl-date.c: 
	* gcl/Makefile.am: 
	* data/Makefile.am: 
	* Makefile.am: 
	add debian directory.

2008-01-21  yetist  <yetist@gmail.com>

	* data/holiday.dat: 
	add comment.

2008-01-21  yetist  <yetist@gmail.com>

	* NEWS: 
	add news.
	
2008-01-21  yetist  <yetist@gmail.com>

	* configure.ac: 
	* po/ChangeLog: 
	* po/zh_CN.po: 

	update chinese translate.

2008-01-21  yetist  <yetist@gmail.com>
